--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = "==3.11.12"
 dependencies = [
     "numpy==2.2.4",
     "open3d==0.19.0",
+    "trimesh>=4.0.0",
+    "scipy>=1.10.0",
 ]
